# nexcore-cccp

./: Cargo.toml  README.md
notebooks/: cccp-consulting-engine.ipynb
notebooks/.ipynb_checkpoints/: cccp-consulting-engine-checkpoint.ipynb
src/: assess.rs  collect.rs  engagement.rs  follow_up.rs  implement.rs  lib.rs  pipeline.rs  plan.rs
